# yurt-pkg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  rust.yml
crates/pkg/: Cargo.toml
crates/pkg/src/: apply.rs  installed.rs  main.rs  resolver.rs  spec.rs
crates/pkg/tests/: cli.rs
crates/yurt-pack/: Cargo.toml
crates/yurt-pack/src/: main.rs  manifest_toml.rs
crates/yurt-pack/tests/: build.rs
crates/yurt-pkg-format/: Cargo.toml
crates/yurt-pkg-format/src/: archive.rs  error.rs  lib.rs  manifest.rs  path.rs
crates/yurt-pkg-repo/: Cargo.toml
crates/yurt-pkg-repo/src/: cache.rs  fetch.rs  lib.rs  metadata.rs  search_index.rs  select.rs  state.rs  store.rs  update.rs  verify.rs
crates/yurt-pkg-repo/tests/: cache.rs  metadata.rs  update_flow.rs
crates/yurt-pkg-trust/: Cargo.toml
crates/yurt-pkg-trust/src/: lib.rs
crates/yurt-pkg-trust/tests/: trusted_repos.rs
crates/yurt-repo-ci/: Cargo.toml
crates/yurt-repo-ci/src/: main.rs
crates/yurt-repo-ci/tests/: publish_local.rs  recipe_lint.rs
docs/: building-packages.md  package-format.md  pkg.md
docs/superpowers/plans/: 2026-05-07-yurt-pkg-distribution-implementation.md  2026-05-07-yurt-pkg-sigstore-fallback-verifier.md  2026-05-07-yurt-pkg-update-flow-implementation.md  2026-05-09-busybox-package-port.md  2026-05-09-ci-package-publish-and-pkg-port.md  2026-05-09-yurt-packages-ci-repository-loop.md  2026-05-09-yurt-pkg-resolver-installer.md
docs/superpowers/specs/: 2026-05-07-yurt-pkg-distribution-design.md  2026-05-07-yurt-pkg-resolver-installer-design.md  2026-05-07-yurt-pkg-update-flow-design.md  2026-05-09-yurt-packages-ci-repository-loop-design.md
scripts/: lint-clippy-changed.sh
