[workspace]
members = [
  "crates/yurt-pkg-format",
  "crates/yurt-pack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/YurtOS/yurt-pkg"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
hex = "0.4"
tempfile = "3"
