[package]
name = "pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
yurt-pkg-trust = { path = "../yurt-pkg-trust" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
