[package]
name = "pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
url = { workspace = true }
yurt-pkg-repo = { path = "../yurt-pkg-repo" }
yurt-pkg-trust = { path = "../yurt-pkg-trust" }

[features]
test-fixtures = ["yurt-pkg-repo/test-fixtures"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
