[package]
name = "pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fs2 = { workspace = true }
rusqlite = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
url = { workspace = true }
yurt-pkg-format = { path = "../yurt-pkg-format" }
yurt-pkg-repo = { path = "../yurt-pkg-repo" }
yurt-pkg-trust = { path = "../yurt-pkg-trust" }

[features]
test-fixtures = ["yurt-pkg-repo/test-fixtures"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
