[package]
name = "yurt-pkg-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reader, validator, and writer for the .yurtpkg.tar.zst package format"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
zstd.workspace = true
thiserror.workspace = true
hex.workspace = true
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
