[package]
name = "yurt-pkg-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
yurt-pkg-format = { path = "../yurt-pkg-format" }
yurt-pkg-trust = { path = "../yurt-pkg-trust" }

[dev-dependencies]
tempfile = { workspace = true }
