[package]
name = "yurt-pkg-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
yurt-pkg-format = { path = "../yurt-pkg-format" }

[dev-dependencies]
tempfile = { workspace = true }
