[package]
name = "yurt-repo-ci"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
yurt-pkg-format = { path = "../yurt-pkg-format" }
yurt-pkg-repo = { path = "../yurt-pkg-repo" }
yurt-pkg-trust = { path = "../yurt-pkg-trust" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
